# mikino

./: .gitignore  Cargo.toml  README.md  changes.md
.github/workflows/: rust.yml
examples/: script.rs  script_bad_scoping_1.rs  script_scoping.rs  sys.rs
rsc/: script_bad_scoping_1.rs  script_demo.rs  script_scoping.rs  trans_demo.rs
src/: ast.rs  check.rs  err.rs  expr.rs  lib.rs  macros.rs  parse.rs  prelude.rs  script.rs  solver.rs  trans.rs
src/ast/: script.rs
src/check/: cexs.rs
src/expr/: test.rs
src/parse/: ast.rs  kw.rs  test.rs
src/parse/ast/: hsmt.rs
src/script/: build.rs  frame.rs
