[package]
name = "mikino_api"
version = "0.5.0"
authors = ["Adrien Champion <adrien.champion@ocamlpro.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A simple induction and BMC engine"
homepage = "https://github.com/AdrienChampion/mikino"
repository = "https://github.com/AdrienChampion/mikino"
documentation = "https://docs.rs/crate/mikino_api"
keywords = ["smt", "satisfiability", "verification", "induction"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "sys"
test = true
required-features = ["parser", "demo"]

[features]
parser = []
demo = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
either = "^1.6.1"
error-chain = "^0.12.4"
lazy_static = "^1.4"
num = "^0.4"
peg = "^0.7"
readonly = "^0.2"
rsmt2 = "^0.14"